--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ nav ul {
     margin: 30px;
     padding: 0;
     display: block;
-    text-align: right;
+    text-align: justify;
 }
 
 .content {
