--- a/main.css
+++ b/main.css
@@ -39,3 +39,27 @@
         background-color: rgb(42, 195, 255);
         font-size: 24px;
         margin: 7,8 }
+
+        .page5 #tak {
+            border: 2px solid black;
+            width: 250px;
+            margin-left: 42%;
+            
+            
+        }
+        
+        .page5 h1{
+            text-align: center;
+            font-size: 40px;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            margin-bottom: 37,8;
+        }
+        
+        .page5 #nie {
+           
+            margin-left: 43%;
+            
+            
+        }
+            
+        
